--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Le livre dont vous êtes le héros</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <!-- 🦊 Consigne 2: Remplacer le contenu du lien par votre teaser.  -->
-    <a href="projet">Mon projet</a>
+    <h1>Surviving the wild</h1>
+    <a href="pages/page1.html">
+      <button>click to start!</button>
+    </a>
   </body>
 </html>
